--- a/gallows.html
+++ b/gallows.html
@@ -29,5 +29,11 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/jogo.js"></script>
+    <script src="js/controller.js"></script>
+    <script>
+        var sprite = createSprite('.sprite');
+        var jogo = criaJogo(sprite);
+        criaController(jogo).inicia();
+    </script>
 </body>
 </html>
